--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   random_string: ^2.3.1
   shared_preferences: ^2.4.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
